exports[`test will have a error action 1`] = `
Object {
  "meta": Object {
    "query": Object {
      "limit": 30,
      "offset": 0,
      "someQueryParam": "someValue",
    },
    "queryString": "key=30&key=0&key=\"someValue\"",
    "reduxResourcesActionType": "LIST_RESOURCE_REQUEST_ERROR",
    "resource": "mockResources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "payload": Array [
    "This is an initial error",
    "This is another error",
  ],
  "type": "LIST_MOCK_RESOURCES_REQUEST_ERROR",
}
`;

exports[`test will have a success action 1`] = `
Object {
  "meta": Object {
    "normalizedResponse": Object {
      "entities": Object {
        "mockResources": Object {
          "resourceId": Object {
            "id": "resourceId",
            "prop1": "initial prop1",
            "prop2": "initial prop2",
            "relatedResource": "relatedResourceId",
          },
        },
        "relatedMockResources": Object {
          "relatedResourceId": Object {
            "id": "relatedResourceId",
            "relatedProp1": "initial relatedProp1",
          },
        },
      },
      "result": Array [
        "resourceId",
      ],
    },
    "query": Object {
      "limit": 30,
      "offset": 0,
      "someQueryParam": "someValue",
    },
    "queryString": "key=30&key=0&key=\"someValue\"",
    "reduxResourcesActionType": "LIST_RESOURCE_REQUEST_SUCCESS",
    "resource": "mockResources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "payload": Array [
    Object {
      "id": "resourceId",
      "prop1": "initial prop1",
      "prop2": "initial prop2",
      "relatedResource": Object {
        "id": "relatedResourceId",
        "relatedProp1": "initial relatedProp1",
      },
    },
  ],
  "type": "LIST_MOCK_RESOURCES_REQUEST_SUCCESS",
}
`;

exports[`test will have a update selectedResourceList action 1`] = `
Object {
  "meta": Object {
    "query": Object {
      "limit": 30,
      "offset": 0,
      "someQueryParam": "someValue",
    },
    "queryString": "key=30&key=0&key=\"someValue\"",
    "reduxResourcesActionType": "SELECT_RESOURCE_LIST",
    "resource": "mockResources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "payload": "key=30&key=0&key=\"someValue\"",
  "type": "SELECT_MOCK_RESOURCES_LIST",
}
`;

exports[`test will have an initial action 1`] = `
Object {
  "meta": Object {
    "query": Object {
      "limit": 30,
      "offset": 0,
      "someQueryParam": "someValue",
    },
    "queryString": "key=30&key=0&key=\"someValue\"",
    "reduxResourcesActionType": "LIST_RESOURCE_REQUEST",
    "resource": "mockResources",
    "timestamp": "2016-01-01T05:00:00.000Z",
  },
  "payload": "key=30&key=0&key=\"someValue\"",
  "type": "LIST_MOCK_RESOURCES_REQUEST",
}
`;
